--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD to Minikube
+name: Local CI/CD with Minikube
 
 on:
   push:
@@ -9,41 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
+      # Step 4: Run tests
       - name: Run tests
         run: npm test || echo "No tests, skipping"
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+      # Step 5: Build Docker image locally
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/docker-jenkins-demo:latest .
+        run: docker build -t docker-jenkins-demo:latest .
 
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/docker-jenkins-demo:latest
-
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
-
+      # Step 6: Load Docker image into Minikube
       - name: Load image into Minikube
-        run: minikube image load docker-jenkins-demo:latest
+        run: |
+          minikube status || minikube start --driver=docker
+          minikube image load docker-jenkins-demo:latest
 
-      
+      # Step 7: Setup kubeconfig for local Minikube
       - name: Setup kubeconfig
         run: |
           export KUBECONFIG=$HOME/.kube/config
@@ -51,9 +45,10 @@ jobs:
           kubectl config get-contexts
           kubectl cluster-info
 
+      # Step 8: Deploy to Minikube
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f deployment.yaml --validate=false
-          kubectl apply -f service.yaml   --validate=false
+          kubectl apply -f deployment.yaml
+          kubectl apply -f service.yaml
           kubectl get pods -o wide
           kubectl get svc
